--- a/study-party/src/index.css
+++ b/study-party/src/index.css
@@ -5,6 +5,16 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  height: 100%;
+}
+
+
+html, body, #app, #app>div {
+  height: 100%
+}
+
+html {
+  height: 100vh;
 }
 
 code {
