--- a/study-party/src/Toolbar.css
+++ b/study-party/src/Toolbar.css
@@ -2,22 +2,52 @@
     display: flex;
     flex-direction: column;
     height: 100vh;
+    font-family: "Montserrat", "Open Sans", Helvetica, Arial, sans-serif;
+    color: white;
+    background-color: rgba(6, 6, 6, 0.86);
+    float: right;
+    width: 30%;
 }
 
 .top-container {
     display: flex;
     flex-direction: row;
     height: 10%;
+    margin-top: 42px;
+    margin-right: 42px;
+    margin-left: 42px;
 }
 
 .text {
     flex-grow: 1;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 29px;
+    text-align: center;
 }
 
 .class-container {
     display: flex;
     flex-direction: column;
     flex-grow: 1;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 29px;
+}
+
+.header {
+    background-color: #01B0F1;
+    margin: 1px;
+    flex-direction: row;
+    flex-grow: 1;
+    display: flex;
+    align-items: center;
+    font-size: 36px;
+    line-height: 44px;
+    text-transform: uppercase;
+    text-align: center;
 }
 
 .label {
@@ -29,27 +59,25 @@
 }
 
 .class {    
-    background-color: beige;
-    margin: 2px;
     flex-direction: row;
     flex-grow: 1;
     display: flex;
     align-items: center;
+    margin: 1px;
 }
 
 .profile {
     width: 30%;
     height: 100%;
-    background-color: green;
 }
 
 .settings {
     width: 30%;
     height: 100%;
-    background-color: grey;
 }
 
 .bottom-container {
-    height: 20%;
+    height: 25%;
+    align-items: center;
 }
 
