--- a/study-party/src/Toolbar.css
+++ b/study-party/src/Toolbar.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     height: 100vh;
-    font-family: "Montserrat", "Open Sans", Helvetica, Arial, sans-serif;
+    font-family: Arial;
     color: white;
     background-color: rgba(6, 6, 6, 0.86);
     float: right;
